--- a/archives/toutiao-search/2023-10-21.md
+++ b/archives/toutiao-search/2023-10-21.md
@@ -1,59 +1,72 @@
 # 2023-10-21
 
-共 266 条
+共 277 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 21 2023 18:00:41 GMT+0800 (China Standard Time) -->
-1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
+<!-- 最后更新时间 Sat Oct 21 2023 19:00:41 GMT+0800 (China Standard Time) -->
+1. [李玟妈妈痛斥女婿多年出轨包小三](https://so.toutiao.com/search?keyword=李玟妈妈痛斥女婿多年出轨包小三)
 1. [早餐不宜吃哪些食物](https://so.toutiao.com/search?keyword=早餐不宜吃哪些食物)
 1. [丰硕成果映照下一个金色十年](https://so.toutiao.com/search?keyword=丰硕成果映照下一个金色十年)
-1. [李玟雕像曝光](https://so.toutiao.com/search?keyword=李玟雕像曝光)
-1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
-1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
+1. [张雨霏：1万美元奖金要去买新包包](https://so.toutiao.com/search?keyword=张雨霏：1万美元奖金要去买新包包)
 1. [90后夫妻产下“猫叫”患儿](https://so.toutiao.com/search?keyword=90后夫妻产下“猫叫”患儿)
-1. [广西一企业发生爆炸6人遇难](https://so.toutiao.com/search?keyword=广西一企业发生爆炸6人遇难)
+1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
+1. [沈腾给谢楠表演了一个“吴京打采”](https://so.toutiao.com/search?keyword=沈腾给谢楠表演了一个“吴京打采”)
+1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
 1. [官方辟谣郑州法斗主人被罚5千](https://so.toutiao.com/search?keyword=官方辟谣郑州法斗主人被罚5千)
-1. [媒体评情侣住酒店一年后收亲密视频](https://so.toutiao.com/search?keyword=媒体评情侣住酒店一年后收亲密视频)
+1. [女子3次徒手将带油卤味偷塞包里](https://so.toutiao.com/search?keyword=女子3次徒手将带油卤味偷塞包里)
 1. [巴以局势持续紧张多国加大斡旋力度](https://so.toutiao.com/search?keyword=巴以局势持续紧张多国加大斡旋力度)
 1. [美官员：质疑以色列担心工作遭报复](https://so.toutiao.com/search?keyword=美官员：质疑以色列担心工作遭报复)
-1. [哈马斯发布攻击训练画面](https://so.toutiao.com/search?keyword=哈马斯发布攻击训练画面)
+1. [李玟雕像曝光](https://so.toutiao.com/search?keyword=李玟雕像曝光)
+1. [内马尔重伤有多严重？骨科专家解读](https://so.toutiao.com/search?keyword=内马尔重伤有多严重？骨科专家解读)
+1. [车主防暴雨积水花800元把车吊房顶](https://so.toutiao.com/search?keyword=车主防暴雨积水花800元把车吊房顶)
 1. [李玟下葬画面曝光 老公和继女未现身](https://so.toutiao.com/search?keyword=李玟下葬画面曝光+老公和继女未现身)
-1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
-1. [女子3次徒手将带油卤味偷塞包里](https://so.toutiao.com/search?keyword=女子3次徒手将带油卤味偷塞包里)
-1. [12306回应高铁200克葡萄售价60元](https://so.toutiao.com/search?keyword=12306回应高铁200克葡萄售价60元)
-1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
-1. [男子过六十大寿没通知亲戚朋友](https://so.toutiao.com/search?keyword=男子过六十大寿没通知亲戚朋友)
-1. [大量沙丁鱼涌入日本渔港后集体死亡](https://so.toutiao.com/search?keyword=大量沙丁鱼涌入日本渔港后集体死亡)
+1. [中纪委3天打两“虎”](https://so.toutiao.com/search?keyword=中纪委3天打两“虎”)
+1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
+1. [巴勒斯坦抗议者打断CNN记者报道](https://so.toutiao.com/search?keyword=巴勒斯坦抗议者打断CNN记者报道)
+1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
 1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
-1. [网红罗大美被控制10余天后遭杀害藏尸](https://so.toutiao.com/search?keyword=网红罗大美被控制10余天后遭杀害藏尸)
-1. [被哈马斯释放的两美国人质家属发声](https://so.toutiao.com/search?keyword=被哈马斯释放的两美国人质家属发声)
+1. [广西一企业发生爆炸6人遇难](https://so.toutiao.com/search?keyword=广西一企业发生爆炸6人遇难)
+1. [警号000001的“老虎”敛财5.5亿元](https://so.toutiao.com/search?keyword=警号000001的“老虎”敛财5.5亿元)
 1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
 1. [百万粉丝网红遭绑架撕票细节披露](https://so.toutiao.com/search?keyword=百万粉丝网红遭绑架撕票细节披露)
-1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
-1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
-1. [中纪委3天打两“虎”](https://so.toutiao.com/search?keyword=中纪委3天打两“虎”)
-1. [巴勒斯坦抗议者打断CNN记者报道](https://so.toutiao.com/search?keyword=巴勒斯坦抗议者打断CNN记者报道)
-1. [车主防暴雨积水花800元把车吊房顶](https://so.toutiao.com/search?keyword=车主防暴雨积水花800元把车吊房顶)
 1. [中纪委公布4名“内鬼”被处理消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被处理消息)
-1. [内马尔重伤有多严重？骨科专家解读](https://so.toutiao.com/search?keyword=内马尔重伤有多严重？骨科专家解读)
-1. [巴西一建筑工人从140米高空坠亡](https://so.toutiao.com/search?keyword=巴西一建筑工人从140米高空坠亡)
-1. [警号000001的“老虎”敛财5.5亿元](https://so.toutiao.com/search?keyword=警号000001的“老虎”敛财5.5亿元)
-1. [沈腾给谢楠表演了一个“吴京打采”](https://so.toutiao.com/search?keyword=沈腾给谢楠表演了一个“吴京打采”)
-1. [中国和斯里兰卡发布联合声明](https://so.toutiao.com/search?keyword=中国和斯里兰卡发布联合声明)
-1. [网友称遛狗拴绳戴嘴套被拒进电梯](https://so.toutiao.com/search?keyword=网友称遛狗拴绳戴嘴套被拒进电梯)
-1. [联合国机构：加沙140万人流离失所](https://so.toutiao.com/search?keyword=联合国机构：加沙140万人流离失所)
-1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
-1. [中国草地掷球队加紧备战亚残运会](https://so.toutiao.com/search?keyword=中国草地掷球队加紧备战亚残运会)
+1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
+1. [被哈马斯释放的两美国人质家属发声](https://so.toutiao.com/search?keyword=被哈马斯释放的两美国人质家属发声)
+1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
+1. [55名影星联名敦促拜登“呼吁停火”](https://so.toutiao.com/search?keyword=55名影星联名敦促拜登“呼吁停火”)
 1. [特鲁多：印度外交行为影响数百万人](https://so.toutiao.com/search?keyword=特鲁多：印度外交行为影响数百万人)
+1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
+1. [职院回应保安被指将流浪狗活活吊死](https://so.toutiao.com/search?keyword=职院回应保安被指将流浪狗活活吊死)
+1. [网友吐槽用了两个月澎湃OS全是BUG](https://so.toutiao.com/search?keyword=网友吐槽用了两个月澎湃OS全是BUG)
+1. [广东阳江安全转移群众3000余人](https://so.toutiao.com/search?keyword=广东阳江安全转移群众3000余人)
+1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
+1. [网友称遛狗拴绳戴嘴套被拒进电梯](https://so.toutiao.com/search?keyword=网友称遛狗拴绳戴嘴套被拒进电梯)
+1. [巴西一建筑工人从140米高空坠亡](https://so.toutiao.com/search?keyword=巴西一建筑工人从140米高空坠亡)
+1. [看《问心》思考生死观](https://so.toutiao.com/search?keyword=看《问心》思考生死观)
+1. [广东局部特大暴雨](https://so.toutiao.com/search?keyword=广东局部特大暴雨)
+1. [中国与巴基斯坦签署20项合作协议](https://so.toutiao.com/search?keyword=中国与巴基斯坦签署20项合作协议)
+1. [男子过六十大寿没通知亲戚朋友](https://so.toutiao.com/search?keyword=男子过六十大寿没通知亲戚朋友)
+1. [海南将有新一轮强降水天气](https://so.toutiao.com/search?keyword=海南将有新一轮强降水天气)
+1. [2名高校学生宰杀肢解流浪狗被处分](https://so.toutiao.com/search?keyword=2名高校学生宰杀肢解流浪狗被处分)
+1. [哈马斯发布攻击训练画面](https://so.toutiao.com/search?keyword=哈马斯发布攻击训练画面)
+1. [金正恩会见俄外长：热情微笑握手](https://so.toutiao.com/search?keyword=金正恩会见俄外长：热情微笑握手)
 1. [又有领导干部被点名“假离婚”](https://so.toutiao.com/search?keyword=又有领导干部被点名“假离婚”)
+1. [中国和斯里兰卡发布联合声明](https://so.toutiao.com/search?keyword=中国和斯里兰卡发布联合声明)
+1. [深圳20人被困电梯一个半小时](https://so.toutiao.com/search?keyword=深圳20人被困电梯一个半小时)
+1. [江苏在编人员下海创业可留编3年](https://so.toutiao.com/search?keyword=江苏在编人员下海创业可留编3年)
+1. [媒体评情侣住酒店一年后收亲密视频](https://so.toutiao.com/search?keyword=媒体评情侣住酒店一年后收亲密视频)
+1. [12306回应高铁200克葡萄售价60元](https://so.toutiao.com/search?keyword=12306回应高铁200克葡萄售价60元)
+1. [大量沙丁鱼涌入日本渔港后集体死亡](https://so.toutiao.com/search?keyword=大量沙丁鱼涌入日本渔港后集体死亡)
+1. [网红罗大美被控制10余天后遭杀害藏尸](https://so.toutiao.com/search?keyword=网红罗大美被控制10余天后遭杀害藏尸)
+1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
+1. [联合国机构：加沙140万人流离失所](https://so.toutiao.com/search?keyword=联合国机构：加沙140万人流离失所)
+1. [中国草地掷球队加紧备战亚残运会](https://so.toutiao.com/search?keyword=中国草地掷球队加紧备战亚残运会)
 1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
 1. [美称将制裁伊朗导弹活动 中方回应](https://so.toutiao.com/search?keyword=美称将制裁伊朗导弹活动+中方回应)
 1. [男子与情人分手后让原配起诉讨钱](https://so.toutiao.com/search?keyword=男子与情人分手后让原配起诉讨钱)
 1. [郭台铭证实和柯文哲见面](https://so.toutiao.com/search?keyword=郭台铭证实和柯文哲见面)
 1. [肺炎支原体感染高发为何至今无疫苗](https://so.toutiao.com/search?keyword=肺炎支原体感染高发为何至今无疫苗)
-1. [中国与巴基斯坦签署20项合作协议](https://so.toutiao.com/search?keyword=中国与巴基斯坦签署20项合作协议)
 1. [10年期美债收益率突破5%关口](https://so.toutiao.com/search?keyword=10年期美债收益率突破5%关口)
-1. [深圳20人被困电梯一个半小时](https://so.toutiao.com/search?keyword=深圳20人被困电梯一个半小时)
 1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
 1. [李玟生前担心大家把她忘了](https://so.toutiao.com/search?keyword=李玟生前担心大家把她忘了)
 1. [李玟今日于武汉安葬](https://so.toutiao.com/search?keyword=李玟今日于武汉安葬)
@@ -67,7 +80,6 @@
 1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
 1. [以前国安顾问：地面进攻只是开始](https://so.toutiao.com/search?keyword=以前国安顾问：地面进攻只是开始)
 1. [哈马斯称正与两国谈被扣押人员事宜](https://so.toutiao.com/search?keyword=哈马斯称正与两国谈被扣押人员事宜)
-1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
 1. [被流浪狗咬伤如何追责](https://so.toutiao.com/search?keyword=被流浪狗咬伤如何追责)
 1. [小米汽车未来前景如何](https://so.toutiao.com/search?keyword=小米汽车未来前景如何)
 1. [李玟粉丝齐喊：CoCo回家了](https://so.toutiao.com/search?keyword=李玟粉丝齐喊：CoCo回家了)
@@ -107,7 +119,6 @@
 1. [《王牌对王牌》唐嫣钟汉良再次搭档](https://so.toutiao.com/search?keyword=《王牌对王牌》唐嫣钟汉良再次搭档)
 1. [媒体：美敲打“台独”怕陷第三战场?](https://so.toutiao.com/search?keyword=媒体：美敲打“台独”怕陷第三战场?)
 1. [台风三巴影响广东部分河流出现洪水](https://so.toutiao.com/search?keyword=台风三巴影响广东部分河流出现洪水)
-1. [金正恩会见俄外长：热情微笑握手](https://so.toutiao.com/search?keyword=金正恩会见俄外长：热情微笑握手)
 1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
 1. [女儿出门前弄流行发型爸爸不满](https://so.toutiao.com/search?keyword=女儿出门前弄流行发型爸爸不满)
 1. [媒体批西方借“人权”干涉中国内政](https://so.toutiao.com/search?keyword=媒体批西方借“人权”干涉中国内政)
